Fix 'original home page' overflow & refactored scss

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,10 +10,6 @@
     --import     : "Chakra Petch", sans-serif;
 }
 
-body {
-    background-color: transparent;
-}
-
 .page-header {
     background-color: var(--dark);
     width           : 100vw;
@@ -37,23 +33,8 @@ body {
     }
 }
 
-// main {
-// z-index : 1;
-// position: relative;
-// width      : 100vw;
-// height     : 100vh;
-// top     : 0;
-// left    : 0;
-// width   : 100vw;
-// }
 main {
     .jumbo-slider {
-        // width              : 100vw;
-        // height             : 100vh;
-        // position           : absolute;
-        // top                : 0;
-        // height             : 0;
-        // width           : 100%;
         background-color: var(--dark);
 
         &__slide {
@@ -143,8 +124,12 @@ main {
                 bottom          : 0;
                 left            : 0;
                 transition      : width 6s ease-in-out;
+
             }
 
+            // &-nav {
+            //     display: none;
+            // }
 
             &--active {
                 .jumbo-slider {
@@ -157,9 +142,7 @@ main {
                         }
 
                         &-info {
-                            background-color      : var(--dark);
-                            // background-color: rgba(202, 194, 150, 0.548);
-                            // background-color   : rgba(202, 194, 150, 0.18);
+                            background-color: var(--dark);
                         }
 
                         &-number {
@@ -209,12 +192,8 @@ main {
                         &-timer {
                             width: 100vw;
                         }
-
-                        // }
                     }
 
-                    // }
-                    // counter links
                     &__counter {
                         position       : absolute;
                         top            : 0;
@@ -253,18 +232,17 @@ main {
                         writing-mode   : sideways-rl;
 
                         &-link {
-                            text-decoration   : none;
-                            text-transform    : uppercase;
-                            color             : var(--white);
-                            padding-top       : 10px;
-                            text-transform    : uppercase;
-                            text-transform    : capitalize;
-                            text-transform    : uppercase;
-                            text-transform    : uppercase;
-                            margin            : 20px 0;
-                            font-weight       : 400;
-                            // font-weight    : 600;
-                            font-size         : 1.2rem;
+                            text-decoration: none;
+                            text-transform : uppercase;
+                            color          : var(--white);
+                            padding-top    : 10px;
+                            text-transform : uppercase;
+                            text-transform : capitalize;
+                            text-transform : uppercase;
+                            text-transform : uppercase;
+                            margin         : 20px 0;
+                            font-weight    : 400;
+                            font-size      : 1.2rem;
 
                             &--active {
                                 color: var(--fluorescent);
@@ -273,6 +251,10 @@ main {
                     }
                 }
             }
+        }
+
+        &__nav {
+            display: none;
         }
     }
 }
